@@ -19,7 +19,7 @@ import logging
 import re
 import time
 from abc import ABC, abstractmethod
-from typing import TYPE_CHECKING, Any
+from typing import TYPE_CHECKING, Any, Dict, List, cast
 
 from astrapy.admin.endpoints import (
     ParsedAPIEndpoint,
@@ -42,6 +42,7 @@ from astrapy.exceptions import (
 )
 from astrapy.info import (
     AstraDBAdminDatabaseInfo,
+    AstraDBAvailableRegionInfo,
     AstraDBDatabaseInfo,
     FindEmbeddingProvidersResult,
     FindRerankingProvidersResult,
@@ -468,6 +469,9 @@ class AstraDBAdmin:
                 **self.api_options.admin_additional_headers,
             }
         self._dev_ops_api_commander = self._get_dev_ops_api_commander()
+        self._regionlist_dev_ops_api_commander = (
+            self._get_dev_ops_regionlist_api_commander()
+        )
 
     def __repr__(self) -> str:
         return f"{self.__class__.__name__}({self.api_options})"
@@ -502,6 +506,34 @@ class AstraDBAdmin:
             redacted_header_names=self.api_options.redacted_header_names,
         )
         return dev_ops_commander
+
+    def _get_dev_ops_regionlist_api_commander(self) -> APICommander:
+        """
+        Instantiate a new APICommander for querying available regions.
+
+        This is a separate commander since the base path is different.
+        """
+        rl_base_path_components = [
+            comp
+            for comp in (
+                ncomp.strip("/")
+                for ncomp in (
+                    self.api_options.dev_ops_api_url_options.dev_ops_api_version,
+                )
+                if ncomp is not None
+            )
+            if comp != ""
+        ]
+        rl_dev_ops_base_path = "/".join(rl_base_path_components)
+        rl_dev_ops_commander = APICommander(
+            api_endpoint=self.api_options.dev_ops_api_url_options.dev_ops_url,
+            path=rl_dev_ops_base_path,
+            headers=self._dev_ops_commander_headers,
+            callers=self.api_options.callers,
+            dev_ops_api=True,
+            redacted_header_names=self.api_options.redacted_header_names,
+        )
+        return rl_dev_ops_commander
 
     def _copy(
         self,
@@ -693,6 +725,7 @@ class AstraDBAdmin:
     ) -> list[AstraDBAdminDatabaseInfo]:
         """
         Get the list of databases, as obtained with a request to the DevOps API.
+
         Async version of the method, for use in an asyncio context.
 
         Args:
@@ -1401,6 +1434,7 @@ class AstraDBAdmin:
     ) -> None:
         """
         Drop a database, i.e. delete it completely and permanently with all its data.
+
         Async version of the method, for use in an asyncio context.
 
         Args:
@@ -1800,6 +1834,184 @@ class AstraDBAdmin:
             spawn_api_options=spawn_api_options,
         ).to_async()
 
+    def find_available_regions(
+        self,
+        *,
+        only_org_enabled_regions: bool | None = None,
+        database_admin_timeout_ms: int | None = None,
+        request_timeout_ms: int | None = None,
+        timeout_ms: int | None = None,
+    ) -> list[AstraDBAvailableRegionInfo]:
+        """
+        Get a list of available regions for database creation.
+
+        Query the DevOps API to get a listing of all the available regions
+        for subsequent use in database creation. The response can be limited
+        to the regions effectively accessible to the caller's Astra Org, or
+        be left unconstrained.
+
+        Args:
+            only_org_enabled_regions: whether to include all regions or select
+                only those that can be effectively used by the caller's Astra Org.
+                By default, the org-based filtering is enabled.
+            database_admin_timeout_ms: a timeout, in milliseconds, to impose on the
+                underlying DevOps API request.
+                If not provided, this object's defaults apply.
+                (This method issues a single API request, hence all timeout parameters
+                are treated the same.)
+            request_timeout_ms: an alias for `database_admin_timeout_ms`.
+            timeout_ms: an alias for `database_admin_timeout_ms`.
+
+        Returns:
+            A list of AstraDBAvailableRegionInfo objects, each representing a region.
+
+        Example:
+            >>> my_astra_db_admin.find_available_regions()
+            [
+                AstraDBAvailableRegionInfo(GCP/us-east1: "Moncks Corner, [...]", ...),
+                AstraDBAvailableRegionInfo(AWS/us-east-2: "US East (Ohio)", ...),
+                ...
+            ]
+            >>> regions = my_astra_db_admin.find_available_regions(
+            ...     only_org_enabled_regions=False,
+            ... )
+            >>> regions[0]
+            AstraDBAvailableRegionInfo(GCP/us-east1: "Moncks Corner, [...]", ...)
+            >>> regions[0].cloud_provider
+            'GCP'
+            >>> regions[0].region_name
+            'us-east1'
+            >>> regions[0].display_name
+            'Moncks Corner, South Carolina'
+        """
+
+        _database_admin_timeout_ms, _da_label = _select_singlereq_timeout_da(
+            timeout_options=self.api_options.timeout_options,
+            database_admin_timeout_ms=database_admin_timeout_ms,
+            request_timeout_ms=request_timeout_ms,
+            timeout_ms=timeout_ms,
+        )
+        timeout_ctx = _TimeoutContext(
+            request_ms=_database_admin_timeout_ms, label=_da_label
+        )
+
+        _only_org_enabled_regions: bool
+        if only_org_enabled_regions is None:
+            _only_org_enabled_regions = True
+        else:
+            _only_org_enabled_regions = only_org_enabled_regions
+        req_params = {
+            "region-type": "vector",
+            "filter-by-org": "enabled" if _only_org_enabled_regions else "disabled",
+        }
+
+        logger.info("getting available regions (DevOps API)")
+        # this cast is required by this DevOps API response being in fact a JSON list:
+        fr_response = cast(
+            List[Dict[str, Any]],
+            self._regionlist_dev_ops_api_commander.request(
+                http_method=HttpMethod.GET,
+                additional_path="regions/serverless",
+                request_params=req_params,
+                timeout_context=timeout_ctx,
+            ),
+        )
+        logger.info("finished getting available regions (DevOps API)")
+        return [
+            AstraDBAvailableRegionInfo._from_dict(region_dict)
+            for region_dict in fr_response
+        ]
+
+    async def async_find_available_regions(
+        self,
+        *,
+        only_org_enabled_regions: bool | None = None,
+        database_admin_timeout_ms: int | None = None,
+        request_timeout_ms: int | None = None,
+        timeout_ms: int | None = None,
+    ) -> list[AstraDBAvailableRegionInfo]:
+        """
+        Get a list of available regions for database creation.
+
+        Async version of the method, for use in an asyncio context.
+
+        Query the DevOps API to get a listing of all the available regions
+        for subsequent use in database creation. The response can be limited
+        to the regions effectively accessible to the caller's Astra Org, or
+        be left unconstrained.
+
+        Args:
+            only_org_enabled_regions: whether to include all regions or select
+                only those that can be effectively used by the caller's Astra Org.
+                By default, the org-based filtering is enabled.
+            database_admin_timeout_ms: a timeout, in milliseconds, to impose on the
+                underlying DevOps API request.
+                If not provided, this object's defaults apply.
+                (This method issues a single API request, hence all timeout parameters
+                are treated the same.)
+            request_timeout_ms: an alias for `database_admin_timeout_ms`.
+            timeout_ms: an alias for `database_admin_timeout_ms`.
+
+        Returns:
+            A list of AstraDBAvailableRegionInfo objects, each representing a region.
+
+        Example:
+            >>> asyncio.run(my_astra_db_admin.async_find_available_regions())
+            [
+                AstraDBAvailableRegionInfo(GCP/us-east1: "Moncks Corner, [...]", ...),
+                AstraDBAvailableRegionInfo(AWS/us-east-2: "US East (Ohio)", ...),
+                ...
+            ]
+            >>> regions = asyncio.run(my_astra_db_admin.async_find_available_regions(
+            ...     only_org_enabled_regions=False,
+            ... ))
+            >>> regions[0]
+            AstraDBAvailableRegionInfo(GCP/us-east1: "Moncks Corner, [...]", ...)
+            >>> regions[0].cloud_provider
+            'GCP'
+            >>> regions[0].region_name
+            'us-east1'
+            >>> regions[0].display_name
+            'Moncks Corner, South Carolina'
+        """
+
+        _database_admin_timeout_ms, _da_label = _select_singlereq_timeout_da(
+            timeout_options=self.api_options.timeout_options,
+            database_admin_timeout_ms=database_admin_timeout_ms,
+            request_timeout_ms=request_timeout_ms,
+            timeout_ms=timeout_ms,
+        )
+        timeout_ctx = _TimeoutContext(
+            request_ms=_database_admin_timeout_ms, label=_da_label
+        )
+
+        _only_org_enabled_regions: bool
+        if only_org_enabled_regions is None:
+            _only_org_enabled_regions = True
+        else:
+            _only_org_enabled_regions = only_org_enabled_regions
+        req_params = {
+            "region-type": "vector",
+            "filter-by-org": "enabled" if _only_org_enabled_regions else "disabled",
+        }
+
+        logger.info("getting available regions (DevOps API), async")
+        # this cast is required by this DevOps API response being in fact a JSON list:
+        fr_response = cast(
+            List[Dict[str, Any]],
+            await self._regionlist_dev_ops_api_commander.async_request(
+                http_method=HttpMethod.GET,
+                additional_path="regions/serverless",
+                request_params=req_params,
+                timeout_context=timeout_ctx,
+            ),
+        )
+        logger.info("finished getting available regions (DevOps API), async")
+        return [
+            AstraDBAvailableRegionInfo._from_dict(region_dict)
+            for region_dict in fr_response
+        ]
+
 
 class DatabaseAdmin(ABC):
     """
@@ -2014,6 +2226,7 @@ class ProviderQueryingDatabaseAdmin(DatabaseAdmin):
     ) -> FindEmbeddingProvidersResult:
         """
         Query the API for the full information on available embedding providers.
+
         Async version of the method, for use in an asyncio context.
 
         Args:
@@ -2165,6 +2378,7 @@ class ProviderQueryingDatabaseAdmin(DatabaseAdmin):
     ) -> FindRerankingProvidersResult:
         """
         Query the API for the full information on available reranking providers.
+
         Async version of the method, for use in an asyncio context.
 
         Args:
@@ -2606,6 +2820,7 @@ class AstraDBDatabaseAdmin(ProviderQueryingDatabaseAdmin):
     ) -> AstraDBAdminDatabaseInfo:
         """
         Query the DevOps API for the full info on this database.
+
         Async version of the method, for use in an asyncio context.
 
         Args:
@@ -2686,6 +2901,7 @@ class AstraDBDatabaseAdmin(ProviderQueryingDatabaseAdmin):
     ) -> list[str]:
         """
         Query the DevOps API for a list of the keyspaces in the database.
+
         Async version of the method, for use in an asyncio context.
 
         Args:
@@ -2852,6 +3068,7 @@ class AstraDBDatabaseAdmin(ProviderQueryingDatabaseAdmin):
         """
         Create a keyspace in this database as requested,
         optionally waiting for it to be ready.
+
         Async version of the method, for use in an asyncio context.
 
         Args:
@@ -3075,6 +3292,7 @@ class AstraDBDatabaseAdmin(ProviderQueryingDatabaseAdmin):
         """
         Delete a keyspace from the database, optionally waiting for the database
         to become active again.
+
         Async version of the method, for use in an asyncio context.
 
         Args:
@@ -3245,6 +3463,7 @@ class AstraDBDatabaseAdmin(ProviderQueryingDatabaseAdmin):
     ) -> None:
         """
         Drop this database, i.e. delete it completely and permanently with all its data.
+
         Async version of the method, for use in an asyncio context.
 
         This method wraps the `drop_database` method of the AstraDBAdmin class,
@@ -3747,6 +3966,7 @@ class DataAPIDatabaseAdmin(ProviderQueryingDatabaseAdmin):
     ) -> list[str]:
         """
         Query the API for a list of the keyspaces in the database.
+
         Async version of the method, for use in an asyncio context.
 
         Args:
@@ -3800,6 +4020,7 @@ class DataAPIDatabaseAdmin(ProviderQueryingDatabaseAdmin):
     ) -> None:
         """
         Create a keyspace in the database.
+
         Async version of the method, for use in an asyncio context.
 
         Args:
@@ -3880,6 +4101,7 @@ class DataAPIDatabaseAdmin(ProviderQueryingDatabaseAdmin):
     ) -> None:
         """
         Drop (delete) a keyspace from the database.
+
         Async version of the method, for use in an asyncio context.
 
         Args:
